config-root/namespaces/jx/jxboot-helmfile-resources/hook-ingress.yaml
# Source: jxboot-helmfile-resources/templates/700-hook-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'jxboot-helmfile-resources'
  name: hook
  namespace: jx
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: hook
              servicePort: 80
            path: "/hook"
      host: 741d68eeb9f3.in.ngrok.io
